{
    "version": 1,
    "name": "TouchManager",
    "maps": [
        {
            "name": "Touch1",
            "id": "7d8330ad-1c17-46eb-bc55-1f3372ff88f5",
            "actions": [
                {
                    "name": "TouchState",
                    "type": "Button",
                    "id": "87be5791-75ff-481f-b6eb-516c1a8d419c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "5ff2f26c-de0a-4fc1-8a32-9495d25f3a15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "c9914d10-177b-4899-84f0-17ca16845102",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15fe199b-4714-4708-83bb-71249cdcc38f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "575d8e5d-e042-498d-a840-d1c851d52f52",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41dff2e1-1bdc-4f8a-8a5b-5b9061c1c3b7",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch2",
            "id": "05c4e60a-14b2-4ea3-8a12-d35bfa271b36",
            "actions": [
                {
                    "name": "TouchState",
                    "type": "Button",
                    "id": "0096255b-d7b8-436c-9dcc-d5338b5146b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0265fcbe-ed4c-4648-9d5d-69f80c0e3d0f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "356a755a-c928-45d8-893c-52cb9445d4e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "45ff71c6-8bf0-43b4-aa83-067a9b79d34e",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09e15caf-7777-4ffb-a9a5-9694f43d7d07",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "459d514d-c255-4ff0-8e88-4b9dda6e62d3",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}